<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="search">Search</string>
    <string name="photo_content_description">Contact\'s Photo</string>
    <string name="starred_description">Favourite Status</string>
    <string name="times_contacted">Times Contacted:</string>
    <string name="last_time_contacted">Last Time Contacted:</string>
    <string name="phones">===PHONES===</string>
    <string name="emails">===EMAILS===</string>
    <string name="empty">-</string>
    <string name="home">Home:</string>
    <string name="mobile">Mobile:</string>
    <string name="work">Work:</string>
    <string name="other">Other:</string>
	<string name="insert">Insert</string>
	<string name="update">Update</string>
	<string name="add_another_phone_number">Add another phone number</string>
	<string name="add_another_email_address">Add another email address</string>
	<string name="delete">Delete</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	
	<string-array name="phone_number_types">
        <item>Mobile</item>
        <item>Work</item>
        <item>Home</item>
        <item>Main</item>
        <item>Work Fax</item>
        <item>Home Fax</item>
        <item>Pager</item>
        <item>Other</item>
    </string-array>
    
    <string-array name="email_addresses_types">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
        <item>Custom</item>
    </string-array>

</resources>
