<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <ImageView
        android:id="@+id/contact_starred_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="10dp"
        android:layout_weight="1"       
        android:contentDescription="@string/starred_description"/>    
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="12"   
        android:orientation="vertical" >
    
        <TextView
            android:id="@+id/contact_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/contact_times_contacted_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times_contacted" />
        
        <TextView
            android:id="@+id/contact_last_time_contacted_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_time_contacted" />
    
    </LinearLayout>
    
    <ImageView
          android:id="@+id/contact_photo_image_view"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="right|center_vertical"
          android:layout_margin="10dp"
          android:layout_weight="2"
          android:contentDescription="@string/photo_content_description"/>

</LinearLayout>
